Post-micro/infrastructure/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000

# apiVersion: v1
# kind: Service
# metadata:
#   name: posts-srv
# spec:
#   type: NodePort
# #   # what pod should i expose to out world? posts ok?
#   selector:
#     app: posts
#   ports:
#     - name: posts
#       protocol: TCP
# #       # port service listen in Node(LVM) from outside Node port for ex port 3000.
#       port: 4000
# #       # port to access app pod that listen
#       targetPort: 4000
