Post-micro/infrastructure/k8s/ingress-srv.yaml
# apiVersion: networking.k8s.io/v1beta1
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  # help ingress controller understand  we try to feed it some routing rules
  # so the ingress controller going to continuesly scan all the
  annotations:
    # nginx have some routnig rule for me.
    kubernetes.io/ingress.class: nginx
    # let us use regex
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  # teach ingress how route to pods
  rules:
    - host: posts.com
      http:
        paths:
          - path: /posts/create
            backend:
              serviceName: posts-clusterip-srv
              servicePort: 4000
          - path: /posts
            backend:
              serviceName: query-srv
              servicePort: 4002
          - path: /posts/?(.*)/comments
            backend:
              serviceName: comments-srv
              servicePort: 4001
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
